--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -290,6 +290,7 @@ padding-bottom: 40px;
   
   .provider-card {
     border: none;
+    height: 420px;
     border-radius: 15px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
