--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -130,7 +130,7 @@ padding-bottom: 40px;
   }
   
   .banner-section .banner-button {
-   
+   width: 150px;
     font-size: 1.2rem;
     padding: 0.4rem 1.8rem;
     border-radius: 0.5rem;
